--- a/styles/style.css
+++ b/styles/style.css
@@ -101,14 +101,14 @@ body {
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
-    padding: 21.5px 0;
+    padding: 2rem 0;
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
 
 }
 
-.apresentacao__links__link:hover {
+.apresentacao__links__navegacao:hover {
     background-color: var(--cor-hover);
 }
 
