--- a/styles/style.css
+++ b/styles/style.css
@@ -92,7 +92,6 @@ body {
 }
 
 .apresentacao__links__navegacao {
-   
     display: flex;
     justify-content: center;
     gap: 16px;
@@ -101,11 +100,10 @@ body {
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
-    padding: 2rem 0;
+    padding: 1.5rem 1.5rem;
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
-
 }
 
 .apresentacao__links__navegacao:hover {
